--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Failure is the pillar of success. Belive in God"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <img style="display: none;" src='./favicon.ico' alt="">
+    <img style="display: none;" src='./spsujoy.jpg' alt="">
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
