--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <img style="display: none;" src='./spsujoy.jpg' alt="">
+    <img style="display: none;" src='./linkPreview.png' alt="">
     <script src="//code.tidio.co/z83ru72zwsp3nk5dlzzah4cfrnqfnufy.js" async></script>
     <!--
       This HTML file is a template.
