--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Failure is the pillar of success. Belive in God"
+      content="A good education can make you great. Believe in God and trust yourself. And please respect your mother and father always. I hope you will be successful one day. Thank you. ❤️"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SUJOY PAUL</title>
+    <title>Portfolio - Sujoy Paul</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
