--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A good education can make you great. Believe in God and trust yourself. And please respect your mother and father always. I hope you will be successful one day. Thank you. ❤️"
+      content="A good education can make you great, believe in God and trust yourself"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
     <title>Portfolio - Sujoy Paul</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>A good education can make you great, believe in God and trust yourself</noscript>
     <div id="root"></div>
     <img style="display: none;" src='./linkPreview.png' alt="">
     <script src="//code.tidio.co/z83ru72zwsp3nk5dlzzah4cfrnqfnufy.js" async></script>
