--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <noscript>A good education can make you great, believe in God and trust yourself</noscript>
     <div id="root"></div>
     <img style="display: none;" src='./linkPreview.png' alt="">
-    <script src="//code.tidio.co/z83ru72zwsp3nk5dlzzah4cfrnqfnufy.js" async></script>
+    <!-- <script src="//code.tidio.co/z83ru72zwsp3nk5dlzzah4cfrnqfnufy.js" async></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
