changes on project card

--- a/public/index.html
+++ b/public/index.html
@@ -24,32 +24,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Portfolio - Sujoy Paul</title>
   </head>
   <body>
-    <noscript>A good education can make you great, believe in God and trust yourself</noscript>
+    <noscript>In the code of life, keep learning as your constant function. Through each iteration, refine your syntax for kindness and compassion. In the end, good men are the true programs of inspiration. - Sujoy Paul</noscript>
+    <noscript>
+     "Sujoy Paul" , "sp sujoy" , "sujoy" , "spsujoy" , "sp sujoy", "web developer, "software developer", "software development", "website development", "designer", "programmer", "coder", "web applications" 
+    </noscript>
     <div id="root"></div>
     <img style="display: none;" src='./linkPreview.png' alt="">
     <!-- <script src="//code.tidio.co/z83ru72zwsp3nk5dlzzah4cfrnqfnufy.js" async></script> -->
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+
+    
     <!-- Aos animation scripts -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
